--- a/cluster/ingress/ingress.yaml
+++ b/cluster/ingress/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: ingress
 spec:
+  ipFamilyPolicy: PreferDualStack
   tls:
     - hosts:
         - helloworld.gawn.dev
