--- a/cluster/ingress/ingress.yaml
+++ b/cluster/ingress/ingress.yaml
@@ -19,7 +19,7 @@ spec:
                 name: gohelloworld
                 port:
                   number: 80
-    - host: pi-node-a
+    - host: pi-node-a.local
       http:
         paths:
           - pathType: Prefix
