Add cert to test domain

--- a/cluster/ingress/ingress.yaml
+++ b/cluster/ingress/ingress.yaml
@@ -7,6 +7,7 @@ spec:
   tls:
     - hosts:
         - helloworld.gawn.dev
+        - pi-node-a.local
       secretName: cloudflare-origin-cert
   rules:
     - host: helloworld.gawn.dev
