Add dual stack command

--- a/cluster/ingress/service.yaml
+++ b/cluster/ingress/service.yaml
@@ -8,6 +8,9 @@ metadata:
     app.kubernetes.io/part-of: ingress
 spec:
   type: NodePort
+  ipFamilies:
+  - IPv6
+  ipFamilyPolicy: RequireDualStack
   ports:
     - name: http
       port: 80
