Try adding external IP

--- a/cluster/ingress/service.yaml
+++ b/cluster/ingress/service.yaml
@@ -8,6 +8,8 @@ metadata:
     app.kubernetes.io/part-of: ingress
 spec:
   type: NodePort
+  externalIPs:
+    - "192.168.20.171"
   ports:
     - name: http
       protocol: TCP
