--- a/cluster/kube-system/ingress-kube-dash.yaml
+++ b/cluster/kube-system/ingress-kube-dash.yaml
@@ -9,10 +9,6 @@ metadata:
     annotations:
       nginx.org/mergeable-ingress-type: "minion"
 spec:
-  tls:
-    - hosts:
-        - kube-dash.gawn.dev
-      secretName: cloudflare-origin-cert
   rules:
     - host: kube-dash.gawn.dev
       http:
@@ -21,6 +17,6 @@ spec:
             path: "/"
             backend:
               service:
-                name: kube-dash-svc-bridge
+                name: kubernetes-dashboard
                 port:
                   name: https
