Adjust TLS configuration

--- a/cluster/ingress/ingress.yaml
+++ b/cluster/ingress/ingress.yaml
@@ -11,6 +11,7 @@ spec:
   tls:
     - hosts:
         - helloworld.gawn.dev
+        - kube-dash.gawn.dev
       secretName: cloudflare-origin-cert
   rules:
     - host: helloworld.gawn.dev
