--- a/cluster/kube-system/ingress-kube-dash.yaml
+++ b/cluster/kube-system/ingress-kube-dash.yaml
@@ -7,6 +7,10 @@ metadata:
       nginx.org/mergeable-ingress-type: "minion"
       nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  tls:
+    - hosts:
+        - kube-dash.gawn.dev
+      secretName: cloudflare-origin-cert-secret
   rules:
     - host: kube-dash.gawn.dev
       http:
