--- a/cluster/services/helloworld/helloworld.yaml
+++ b/cluster/services/helloworld/helloworld.yaml
@@ -19,6 +19,13 @@ spec:
         image: ghcr.io/jamesgawn/gohelloworld:1.0.1
         ports:
         - containerPort: 8080
+        resources:
+          requests: 
+            cpu: "200m"
+            memory: "10Mi"
+          limits:
+            cpu: "500m"
+            memory: "100Mi"
 ---
 apiVersion: v1
 kind: Service
