--- a/cluster/system/kube-system/csi-driver-nfs.yaml
+++ b/cluster/system/kube-system/csi-driver-nfs.yaml
@@ -1,20 +1,20 @@
-apiversion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: csi-driver-nfs
-  namespace: shared-services
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  project: default
-  source:
-    chart: csi-driver-nfs
-    repoURL: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
-    targetRevision: 4.5.0
-    helm:
-      releaseName: csi-driver-nfs
-      valuesObject:
-        kubeletDir: "/var/snap/microk8s/common/var/lib/kubelet"
-  destination:
-    server: "http://kubernetes.default.svc"
-    namespace: shared-services
+# apiversion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: csi-driver-nfs
+#   namespace: shared-services
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   project: default
+#   source:
+#     chart: csi-driver-nfs
+#     repoURL: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+#     targetRevision: 4.5.0
+#     helm:
+#       releaseName: csi-driver-nfs
+#       valuesObject:
+#         kubeletDir: "/var/snap/microk8s/common/var/lib/kubelet"
+#   destination:
+#     server: "http://kubernetes.default.svc"
+#     namespace: shared-services
