--- a/cluster/system/kube-system/csi-driver-nfs.yaml
+++ b/cluster/system/kube-system/csi-driver-nfs.yaml
@@ -10,11 +10,11 @@ spec:
   source:
     chart: csi-driver-nfs
     repoURL: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
-    targetRevision: 4.5.0
+    targetRevision: v4.5.0
     helm:
-      releaseName: csi-driver-nfs
-      valuesObject:
-        kubeletDir: /var/snap/microk8s/common/var/lib/kubelet
+      paramters:
+        - name: kubeletDir
+          value: /var/snap/microk8s/common/var/lib/kubelet
   destination:
-    server: http://kubernetes.default.svc
+    name: in-cluster
     namespace: default
