--- a/cluster/system/kube-system/csi-driver-nfs.yaml
+++ b/cluster/system/kube-system/csi-driver-nfs.yaml
@@ -9,12 +9,13 @@ spec:
   project: default
   source:
     chart: csi-driver-nfs
-    repoURL: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+    repoURL: >-
+      https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
     targetRevision: v4.5.0
     helm:
       paramters:
         - name: kubeletDir
           value: /var/snap/microk8s/common/var/lib/kubelet
   destination:
-    name: in-cluster
+    server: 'https://kubernetes.default.svc'
     namespace: default
