--- a/cluster/system/shared-services/storage-class-nfs.yaml
+++ b/cluster/system/shared-services/storage-class-nfs.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nfs-csi
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: handside-nas.local
+  server: 192.168.1.147
   share: /volume1/cluster-storage
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
