--- a/cluster/system/shared-services/storage-class-nfs.yaml
+++ b/cluster/system/shared-services/storage-class-nfs.yaml
@@ -1,13 +1,13 @@
-# apiVersion: storage.k8s.io/v1
-# kind: StorageClass
-# metadata: 
-#   name: nfs-csi
-# provisioner: nfs.csi.k8s.io
-# parameters:
-#   server: 192.168.1.147
-#   share: /volume1/cluster-storage
-# reclaimPolicy: Delete
-# volumeBindingMode: Immediate
-# mountoptions:
-#   - hard
-#   - nfsvers=4.1
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata: 
+  name: handside-nas-nfs
+provisioner: nfs.csi.k8s.io
+parameters:
+  server: 192.168.1.147
+  share: /volume1/cluster-storage
+reclaimPolicy: Delete
+volumeBindingMode: Immediate
+mountoptions:
+  - hard
+  - nfsvers=4.1
