--- a/cluster/scratch/test-storage.yaml
+++ b/cluster/scratch/test-storage.yaml
@@ -1,12 +1,12 @@
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: test-nfs
-# spec:
-#   accessModes:
-#     - ReadWriteMany  # In this example, multiple Pods consume the same PVC.
-#   resources:
-#     requests:
-#       storage: 10Gi
-#   storageClassName: handside-nas-nfs
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nfs-test1
+spec:
+  accessModes:
+    - ReadWriteMany  # In this example, multiple Pods consume the same PVC.
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: handside-nas-nfs
