--- a/apps/helloworld/ingress.yaml
+++ b/apps/helloworld/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-    name: ingress-helloworld-minon
+    name: helloworld
     annotations:
       nginx.org/mergeable-ingress-type: "minon"
 spec:
