--- a/apps/helloworld/ingress.yaml
+++ b/apps/helloworld/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             path: "/"
             backend:
               service:
-                name: helloworld
+                name: gohelloworld
                 port:
                   name: http
             
