Change service back to helloworld

--- a/apps/helloworld/ingress.yaml
+++ b/apps/helloworld/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             path: "/"
             backend:
               service:
-                name: gohelloworld
+                name: helloworld
                 port:
                   name: http
             
