--- a/cluster/services/helloworld/helloworld.yaml
+++ b/cluster/services/helloworld/helloworld.yaml
@@ -33,7 +33,7 @@ metadata:
   name: gohelloworld
 spec:
   selector:
-    app: gohelloworld
+    app: helloworld
   ports:
   - name: http
     protocol: TCP
