Adjust service layout

--- a/cluster/services/helloworld/service.yaml
+++ b/cluster/services/helloworld/service.yaml
@@ -6,7 +6,7 @@ metadata:
     selector:
       app: gohelloworld
       ports:
-        name: http
+      - name: http
         protocol: TCP
         port: 80
         targetPort: 8080
