--- a/cluster/system/shared-services/csi-storage-driver.yaml
+++ b/cluster/system/shared-services/csi-storage-driver.yaml
@@ -19,3 +19,7 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: shared-services
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
