Add image updater configuration

--- a/cluster/apps/helloworld.yaml
+++ b/cluster/apps/helloworld.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: ghcr.io/jamesgawn/gohelloworld:1.x.x
 spec:
   destination:
     namespace: default
