--- a/cluster/system/argocd/argocd-image-updater.yaml
+++ b/cluster/system/argocd/argocd-image-updater.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-image-updater-config
+  namespace: argocd
 data:
   registries.conf: |
     registries:
-    - name: Docker Hub
+    - name: Github Container Registry
       prefix: ghcr.io
       api_url: https://ghcr.io
       credentials: pullsecret:argocd/ghcr-secret
