--- a/cluster/apps/helloworld.yaml
+++ b/cluster/apps/helloworld.yaml
@@ -7,6 +7,8 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   annotations:
     argocd-image-updater.argoproj.io/image-list: ghcr.io/jamesgawn/gohelloworld
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/git-branch: main
 spec:
   destination:
     namespace: default
