--- a/cluster/apps/scratch.yaml
+++ b/cluster/apps/scratch.yaml
@@ -1,20 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: scratch
-  namespace: scratch
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    namespace: default
-    server: 'https://kubernetes.default.svc'
-  source:
-    path: apps/scratch
-    repoURL: 'git@github.com:jamesgawn/k8s-home.git'
-    targetRevision: HEAD
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: scratch
+#   namespace: scratch
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   destination:
+#     namespace: default
+#     server: 'https://kubernetes.default.svc'
+#   source:
+#     path: apps/scratch
+#     repoURL: 'git@github.com:jamesgawn/k8s-home.git'
+#     targetRevision: HEAD
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
