fix: stop auto pruning new stuff

--- a/system/datadog/datadog-operator.yaml
+++ b/system/datadog/datadog-operator.yaml
@@ -17,5 +17,5 @@ spec:
     namespace: datadog
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
