--- a/cluster/system/datadog.yaml
+++ b/cluster/system/datadog.yaml
@@ -16,5 +16,5 @@ spec:
   project: default
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
