feat: enable live containers view in DD

--- a/system/datadog/datadog-agent.yaml
+++ b/system/datadog/datadog-agent.yaml
@@ -13,6 +13,9 @@ spec:
       appSecret:
         secretName: datadog-secret
         keyName: app-key
+  features:
+    liveContainerCollection:
+      enabled: true
   override:
     clusterAgent:
       image:
