--- a/cluster/system/datadog.yaml
+++ b/cluster/system/datadog.yaml
@@ -1,20 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: datadog
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    namespace: datadog
-    server: 'https://kubernetes.default.svc'
-  source:
-    path: system/datadog
-    repoURL: 'git@github.com:jamesgawn/k8s-home.git'
-    targetRevision: HEAD
-  project: default
-  syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: datadog
+#   namespace: argocd
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   destination:
+#     namespace: datadog
+#     server: 'https://kubernetes.default.svc'
+#   source:
+#     path: system/datadog
+#     repoURL: 'git@github.com:jamesgawn/k8s-home.git'
+#     targetRevision: HEAD
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: false
+#       selfHeal: false
