--- a/system/cloudflared/config.yaml
+++ b/system/cloudflared/config.yaml
@@ -9,8 +9,8 @@ metadata:
 data:
   config.yaml: |
     # Name of the tunnel you want to run
-    tunnel: example-tunnel
-    credentials-file: /etc/cloudflared/creds/credentials.json
+    tunnel: ana-pi-cluster
+    credentials-file: /etc/cloudflared/creds/3d880b14-b44c-4a24-9ae5-49c5098d6253.json
     # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
     # Autoupdates applied in a k8s pod will be lost when the pod is removed or restarted, so
