--- a/system/cloudflared/deployment.yaml
+++ b/system/cloudflared/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: cloudflared
-        image: cloudflare/cloudflared:2022.3.0
+        image: cloudflare/cloudflared:2022.10.0-arm64
         args:
         - tunnel
         # Points cloudflared to the config file, which configures what
