--- a/system/cloudflared/config.yaml
+++ b/system/cloudflared/config.yaml
@@ -8,30 +8,15 @@ metadata:
   name: cloudflared
 data:
   config.yaml: |
-    # Name of the tunnel you want to run
     tunnel: ana-pi-cluster
     credentials-file: /etc/cloudflared/creds/3d880b14-b44c-4a24-9ae5-49c5098d6253.json
-    # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
-    # Autoupdates applied in a k8s pod will be lost when the pod is removed or restarted, so
-    # autoupdate doesn't make sense in Kubernetes. However, outside of Kubernetes, we strongly
-    # recommend using autoupdate.
     no-autoupdate: true
-    # The `ingress` block tells cloudflared which local service to route incoming
-    # requests to. For more about ingress rules, see
-    # https://developers.cloudflare.com/cloudflare-one/connections/connect-apps/configuration/ingress
-    #
-    # Remember, these rules route traffic from cloudflared to a local service. To route traffic
-    # from the internet to cloudflared, run `cloudflared tunnel route dns <tunnel> <hostname>`.
-    # E.g. `cloudflared tunnel route dns example-tunnel tunnel.example.com`.
     ingress:
-    # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
-    - hostname: test.gawn.dev
-      service: http://web-service:80
-    # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
-    # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
-    # in the connection from cloudflared to your local service, not from the internet to cloudflared.
-    - hostname: helloworldv2.gawn.dev
+    - hostname: helloworld-v2.gawn.dev
       service: http://helloworld.default.svc.cluster.local
-    # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
+    - hostname: kube-dash-v2.gawn.dev
+      service: https://kubernetes-dashboard.default.svc.cluster.local
+    - hostname: argocd-v2.gawn.dev
+      service: https://argocd-server.default.svc.cluster.local
     - service: http_status:404
