Update namespace for system access

--- a/system/cloudflared/config.yaml
+++ b/system/cloudflared/config.yaml
@@ -16,7 +16,7 @@ data:
     - hostname: helloworld-v2.gawn.dev
       service: http://helloworld.default.svc.cluster.local
     - hostname: kube-dash-v2.gawn.dev
-      service: https://kubernetes-dashboard.default.svc.cluster.local
+      service: https://kubernetes-dashboard.kube-system.svc.cluster.local
     - hostname: argocd-v2.gawn.dev
-      service: https://argocd-server.default.svc.cluster.local
+      service: https://argocd-server.argocd.svc.cluster.local
     - service: http_status:404
