--- a/system/cloudflared/deployment.yaml
+++ b/system/cloudflared/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflared
+  annotations:
+    reloader.stakater.com/search: "true"
 spec:
   selector:
     matchLabels:
