--- a/cluster/system/reloader.yaml
+++ b/cluster/system/reloader.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://stakater.github.io/stakater-charts
-    targetRevision: 1.0.55
+    targetRevision: HEAD
     chart: stakater/reloader
   destination:
     server: 'https://kubernetes.default.svc'
