--- a/cluster/system/reloader.yaml
+++ b/cluster/system/reloader.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://stakater.github.io/stakater-charts
     targetRevision: v1.0.55
-    chart: stakater/reloader
+    chart: reloader
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: reloader
