--- a/cluster/system/reloader.yaml
+++ b/cluster/system/reloader.yaml
@@ -14,3 +14,7 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: reloader
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
