--- a/system/cloudflared/config.yaml
+++ b/system/cloudflared/config.yaml
@@ -15,6 +15,8 @@ data:
     ingress:
     - hostname: helloworld.gawn.dev
       service: http://helloworld.default.svc.cluster.local
+    - hostname: helloworld-v2.gawn.dev
+      service: http://helloworld.default.svc.cluster.local
     - hostname: kube-dash.gawn.dev
       service: https://kubernetes-dashboard.kube-system.svc.cluster.local
       originRequest:
