Enable prune/self-heal within cloudflared deployment

--- a/cluster/system/cloudflared.yaml
+++ b/cluster/system/cloudflared.yaml
@@ -16,8 +16,8 @@ spec:
   project: default
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
 ---
 apiVersion: v1
 kind: Namespace
