--- a/system/cloudflared/deployment.yaml
+++ b/system/cloudflared/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: cloudflared
     spec:
+      revisionHistoryLimit: 1
       containers:
       - name: cloudflared
         image: cloudflare/cloudflared:2023.10.0-arm64
