Add restart policy

--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -28,3 +28,4 @@ spec:
                 secretKeyRef:
                   name: telegam-bot-secret
                   key: token
+          restartPolicy: Never
