--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -15,7 +15,7 @@ spec:
                 claimName: database-storage-pvc
           containers:
           - name: ng-dfs-notifier
-            image: ghcr.io/jamesgawn/ng-dfs-notifier
+            image: ghcr.io/jamesgawn/ng-dfs-notifier:0.1.2
             imagePullPolicy: IfNotPresent
             command:
             - /ng-dfs-notifier
