Suspend ng-dsf-cronjob

--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -6,6 +6,7 @@ spec:
   schedule: "5 * * * *"
   jobTemplate:
     spec:
+      suspend: true
       backoffLimit: 2
       template:
         spec:
