--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -19,7 +19,8 @@ spec:
             image: ghcr.io/jamesgawn/ng-dfs-notifier:0.1.3
             imagePullPolicy: IfNotPresent
             command:
-            - /ng-dfs-notifier --databaseLocation /storage/events.db
+            - /ng-dfs-notifier
+            - "--databaseLocation /storage/events.db"
             volumeMounts:
             - name: nfs
               mountPath: "/storage"
