--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -20,8 +20,7 @@ spec:
             imagePullPolicy: IfNotPresent
             command:
             - /ng-dfs-notifier
-            args:
-              - "--databaseLocation /storage/events.db"
+            args: ["databaseLocation", "/storage/events.db"]
             volumeMounts:
             - name: nfs
               mountPath: "/storage"
