--- a/apps/ng-dfs-notifier/cronjob.yaml
+++ b/apps/ng-dfs-notifier/cronjob.yaml
@@ -20,7 +20,8 @@ spec:
             imagePullPolicy: IfNotPresent
             command:
             - /ng-dfs-notifier
-            args: ["databaseLocation", "/storage/events.db"]
+            args:
+            - "--databaseLocation /storage/events.db"
             volumeMounts:
             - name: nfs
               mountPath: "/storage"
