--- a/apps/scratch/test.yaml
+++ b/apps/scratch/test.yaml
@@ -1,34 +1,22 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: nginxdualstack
-# spec:
-#   selector:
-#     matchLabels:
-#       app: nginxdualstack
-#   replicas: 1
-#   template:
-#     metadata:
-#       labels:
-#         app: nginxdualstack
-#     spec:
-#       containers:
-#       - name: nginxdualstack
-#         image: rocks.canonical.com/cdk/diverdane/nginxdualstack:1.0.0
-#         ports:
-#         - containerPort: 80
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx6
-# spec:
-#   type: NodePort
-#   ipFamilies:
-#   - IPv6
-#   ipaFamilyPolicy: RequireDualStack
-#   selector:
-#     run: nginxdualstack
-#   ports:
-#   - port: 80
-#     protocal: TCP
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: jump
+  labels:
+    k8s-app: jump
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      k8s-app: jump
+  template:
+    metadata:
+      name: jump
+      labels:
+        k8s-app: jump
+    spec:
+      containers:
+        - name: jump
+          image: ubuntu:latest
+          tty: true
+          stdin: true
